# VehicleVitals

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
VehicleVitals/: add_record.py  config.py  display.py  edit.py  main.py
VehicleVitals/config_commands/: create.py  delete.py  get.py  read.py  update.py
VehicleVitals/sql/: init_database.sql  update_db_from_v0.1_to_v0.2.sql  update_db_from_v0.2_to_v0.3.sql
scripts/: update_version.py
