[tool.poetry]
name = "VehicleVitals"
version = "0.3.0"
description = ""
authors = ["Brandon Leon <brandonleon@pm.me>"]
readme = "README.md"
packages = [{include = "VehicleVitals", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.6.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vv = "VehicleVitals.main:app"